# oren-studio-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
agents/: README.md  __init__.py
agents/knowledge_agent/: README.md  __init__.py  agent.py  pyproject.toml
agents/knowledge_agent/tests/: conftest.py  test_agent.py
agents/publishing_agent/: README.md  __init__.py  agent.py
agents/recording_agent/: README.md  __init__.py  agent.py
agents/research_agent/: README.md  __init__.py  agent.py  github_source.py  pyproject.toml  youtube_source.py
agents/research_agent/tests/: conftest.py  test_agent.py  test_youtube_source.py
agents/script_agent/: README.md  __init__.py  agent.py  pyproject.toml
agents/script_agent/tests/: conftest.py  test_agent.py
agents/trend_agent/: README.md  __init__.py  agent.py  github_trending_source.py  pyproject.toml
agents/trend_agent/tests/: conftest.py  test_agent.py  test_github_trending_source.py
agents/video_agent/: README.md  __init__.py  agent.py
agents/voice_agent/: README.md  __init__.py  agent.py
apps/: README.md
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 7f805ed657bb_add_research_notes_table.py  9d2c4a7e1f6b_add_prompt_library_table.py  a6551666af3e_initial_schema_projects_sources_agent_.py  b7e3f0a5c1d9_add_storyboards_table.py  c3a9f1d8e2b4_add_style_profile_table.py  c8f2a1d4b6e7_add_project_source_text.py  f4b1e6c8a9d3_add_scripts_table.py
apps/api/app/: __init__.py  config.py  db.py  deps.py  main.py  models.py  schemas.py  ws.py
apps/api/app/routers/: __init__.py  agent_runs.py  approvals.py  knowledge.py  projects.py  prompt_library.py  style_profile.py
apps/api/app/services/: agent_runs.py  approvals.py  knowledge.py  orchestrator.py  prompt_library.py  research.py  script.py  storyboard.py  style_profile.py
apps/api/tests/: conftest.py  test_agent_runs.py  test_approvals.py  test_knowledge_search.py  test_orchestrator.py  test_projects.py  test_prompt_library.py  test_research_persistence.py  test_script_persistence.py  test_smoke_e2e.py  test_storyboard_persistence.py  test_storyboard_route.py  test_style_profile.py
apps/web/: .env.local.example  README.md  package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/chat/: page.tsx
apps/web/app/knowledge/: page.tsx
apps/web/app/ops/: page.tsx
apps/web/app/projects/: page.tsx
apps/web/app/projects/[id]/: page.tsx
apps/web/app/projects/[id]/storyboard/: page.tsx
apps/web/app/prompts/: page.tsx
apps/web/app/settings/: page.tsx
apps/web/components/: Nav.tsx
apps/web/lib/: api.ts
docker/: README.md
docs/: README.md  agents.md  api.md  architecture.md  database.md  decisions.md  open-source-landscape.md  prd.md  roadmap.md  standards.md  vision.md
prompts/: README.md
providers/: README.md
providers/avatar/: README.md
providers/crawl/: README.md
providers/llm/: README.md  pyproject.toml
providers/llm/llm_provider/: __init__.py  client.py
providers/llm/tests/: conftest.py  test_client.py
providers/publish/: README.md
providers/search/: README.md
providers/video/: README.md
providers/voice/: README.md
scripts/: README.md  seed_style_profile.py
services/: README.md
services/orchestrator-worker/: README.md
services/scheduler/: README.md
workflows/: README.md  __init__.py  graph.py  idea_scoring.py  pyproject.toml  storyboard.py
workflows/tests/: conftest.py  test_idea_scoring.py  test_storyboard.py
