[project]
name = "oren-studio-workflows"
version = "0.1.0"
description = "LangGraph orchestration graph for Oren Studio AI"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "oren-studio-core",
    "oren-studio-providers-llm",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
