[project]
name = "oren-studio-knowledge-agent"
version = "0.1.0"
description = "Knowledge Agent — chunk + embed + upsert into Qdrant via packages/memory. See docs/agents.md and docs/roadmap.md Phase 2.8/2.9."
requires-python = ">=3.11"
dependencies = [
    "oren-studio-core",
    "oren-studio-providers-llm",
    "oren-studio-memory",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
