[project]
name = "oren-studio-script-agent"
version = "0.1.0"
description = "Script Agent — Hook/Body/CTA/Caption/Title/Hashtags in Oren's voice via providers/llm. See docs/agents.md and docs/roadmap.md Phase 3.2-3.4."
requires-python = ">=3.11"
dependencies = [
    "oren-studio-core",
    "oren-studio-providers-llm",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
