[project]
name = "oren-studio-trend-agent"
version = "0.1.0"
description = "Trend Agent — GitHub Trending discovery (v1). See docs/agents.md and docs/roadmap.md Phase 2.10."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "oren-studio-core",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: real network calls (e.g. live GitHub Trending fetch) — excluded by default, run with `pytest -m integration`",
]
addopts = "-m 'not integration'"
