[project]
name = "oren-studio-api"
version = "0.1.0"
description = "FastAPI backend / BFF for Oren Studio AI — hosts the embedded LangGraph Orchestrator (ADR-001)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic-settings>=2.4",
    "oren-studio-core",
    "oren-studio-workflows",
    "oren-studio-memory",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
